# vast_tst_mcp

./: .gitignore  .mcp.json  LICENSE  README.md  mcp-config.example.json  opencode.json  package.json  pyproject.toml
.codex/: config.toml
docs/: clients.md
scripts/: run_mcp.sh
src/vast_ai_mcp/: __init__.py  __main__.py  client.py  config.py  history.py  parsing.py  scheduler.py  server.py
tests/: test_config.py  test_history.py  test_parsing.py  test_scheduler.py  test_server.py
